--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
         <title>Page Title</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-        <script src="js/test.js"></script>
+        
     </head>
     <body>
         ggggg
+        <h1 id="demo">ipsum dolor sit, amet consectetur adipisicing.</h1>
+        <a href=""></a>Lorem ipsum, dolor sit amet consectetur adipisicing.
+
+
+        <button class="w3-button w3-red w3-hover-purple w3-round-xlarge" type="submit" onclick="myFunction()">Try it</but> </button>
+        <script src="js/test.js"></script>
     </body>
 </html>
